cambios en el responsive

--- a/inicio.html
+++ b/inicio.html
@@ -15,7 +15,7 @@
 
     <nav class="container cont-nav">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
           <img src="assets/images/logoForma.png" alt="">
         </div>
         <div class="col-lg-4">
