--- a/index.html
+++ b/index.html
@@ -7,187 +7,184 @@
     <title>Labcar</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
   </head>
-
   <body>
 
-
-    <nav class="container cont-nav">
-      <div class="row">
-        <div class="col-lg-8">
-          <img src="assets/images/logoForma.png" alt="">
-        </div>
-        <div class="col-lg-4">
-          <div id="barra-nav">
+    <nav class="navbar navbar-default nav-labcar navbar-fixed-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <img src="assets/images/logoForma.png" alt="">
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
+              <ul class="nav navbar-nav navbar-right navbar-lab">
                 <li><a href="#">Viaja</a></li>
                 <li><a href="#">Conduce</a></li>
-                <li><a href="#">Iniciar sesión</a></li>
+                <li><a href="#">Inicia Sesión</a></li>
               </ul>
-            </div>
+            </div><!-- /.navbar-collapse -->
           </div>
         </div>
-      </div>
+      </div><!-- /.container-fluid -->
     </nav>
 
 
 
     <section>
-      <div class="row clear-margin bg-img1">
-        <div class="col-lg-4 container-color-yellow col-lg-offset-8">
-          <p class="titular">Disfruta del viaje
-            <br>Eres dueño de tu tiempo</p>
-          <div class="col-lg-12 texto-logo">
-            <p class="viaja-con">Viaja con</p>
-            <img src="assets/images/logoBlanco.png" height=15 class="logo-blanco">
-          </div>
-          <button type="button" class="btn btn-sm btn-light registrate">REGÍSTRATE</button>
-          <p class="o-bien">________________ O bien ________________ </p>
-          <button type="button" class="btn btn-sm btn-light registrate">Conviértete en un conductor</button>
-        </div>
-      </div>
-    </section>
-
-    <section class="container-fluid bg-yellow">
-      <div class="row">
-        <div class="col-lg-10">
-          <div class="row contorno">
-            <div class="col-lg-5">
-              <img src="assets/images/iPhone6Plus.png" alt="">
-            </div>
-            <div class="col-lg-5">
-              <p class="titular">Descarga la nueva app</p>
-              <p class="parrafo">La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aun más fácil y rápido</p>
-              <p class="parrafo"> Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir.
-              </p>
+      <div class="bg-img1">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-10 col-sm-7 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-5 col-md-offset-7 col.lg-offset-7  bg-yellow ">
+              <div class="hidden-xs">
+                <p class="titular">Disfruta del viaje</p>
+                <p class="titular">Eres dueño de tu tiempo</p>
+                <p class="parrafo">Viaja con <img src="assets/images/logoBlanco.png" alt="" class="labcar-white-logo"></p>
+                <button class="btn btn-default btn-lab" type="submit">Regístrate</button>
+                <p class="before-after-lines text-center">o bien</p>
+                <button class="btn btn-default btn-lab" type="submit">Conviértete en un conductor</button>
+              </div>
+              <div class="hidden-sm hidden-md hidden-lg">
+                <p class="parrafo">Comienza a viajar</p>
+                <p class="parrafo">con <img src="assets/images/logoBlanco.png" alt="" class="labcar-white-logo"></p>
+                <button class="btn btn-default btn-lab" type="submit">Descarga el APP</button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-2">
-        </div>
       </div>
     </section>
-
-
     <section>
-      <div class="row clear-margin bg-img2">
-        <div id="container-color-black" class="col-lg-4  col-lg-offset-8">
-          <div class="">
+      <div class="bg-yellow">
+        <div class="row row-clear">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-10 col-md-10 col-lg-10 border-white">
+            <div class="row">
+              <div class="col-sm-6 col-md-6 col-lg-6 iphone-div-md">
+                <p class="titular visible-xs text-center">La nueva app</p>
+                <img class="img-responsive" src="assets/images/iPhone6Plus.png" alt="">
+              </div>
+              <div class="hidden-xs col-sm-5 col-md-5 col-lg-5 download-app">
+                <p>Descarga la nueva app</p>
+                <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieres aún más fácil y rápido.</p>
+                <p>Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes; tu conductor sabe exactamente a donde ir.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row visible-xs">
+          <div class="col-xs-12">
+            <p class="text-center arrive-faster">Llega a tu destino aún más rápido</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container-fluid bg-img2">
+        <div class="row">
+          <div class="col-xs-12 com-sm-12 col-md-6 col-md-offset-6 col-lg-4 col-lg-offset-8 bg-black dark-container-size">
             <p class="titular">Conduce cuando quieras</p>
             <p class="parrafo">LabCar es una opción flexible para alcanzar tus metas financieras</p>
-            <button type="button" class="btn btn-sm btn-light yellow-btn">Conviértete en conductor</button>
+            <button class="btn  yellow-btn">Conviértete en conductor</button>
           </div>
         </div>
       </div>
     </section>
-
-
-    <section class="container-fluid bg-yellow">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="texts">
-            <p class="titular">Tarifas</p>
-            <p class="parrafo">Consulta las tarifas LabCar aquí</p>
-          </div>
-          <div class="icono-barrita1">
-            <form>
-              <div class="form-row">
-                <div class="col-12">
-                  <img src="assets/images/shape.png">
-                  <input type="text" class="form-tarifa" placeholder="Ingrese su punto de partida">
-                </div>
-              </div>
-          </div>
-          <div class="icono-barrita1">
-            <form>
-              <div class="form-row">
-                <div class="col-12">
-                  <img src="assets/images/shape2.png">
-                  <input type="text" class="form-tarifa" placeholder="Ingrese su destino">
-                </div>
-              </div>
-          </div>
-          <button type="button" class="btn btn-sm btn-light registrate">REGÍSTRATE</button>
-        </div>
-
-        <div class=" mapa-margin col-lg-4">
-          <div class="container-mapa">
-            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3328.066312055983!2d-70.7461681852342!3d-33.473624280767275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sfatima+332!5e0!3m2!1ses!2scl!4v1512532457481" width="400" height="400"
-              frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="container-fluid bg-gray">
-      <div class="row">
-        <div class="col-lg-12">
-          <img src="assets/images/logoBlanco.png">
-          <div class="page-header">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class=" redes-sociales col-lg-3">
-          <!-- iconos -->
-          <i class="ion-social-facebook"></i>
-          <i class="ion-social-twitter"></i>
-          <i class="ion-social-linkedin"></i>
-          <i class="ion-social-facebook"></i>
-          <i class="ion-social-apple"></i>
-          <i class="ion-play"></i>
-
-
-        </div>
-        <div class="col-lg-6">
+    <section>
+      <div class="container-fluid bg-yellow">
+        <div class="container">
           <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li><a href="#">Viaja</a></li>
-                <li><a href="#">Conduce</a></li>
-                <li><a href="#">Ciudades</a></li>
-                <li><a href="#">Ciudades</a></li>
-                <li><a href="#">Entregas</a></li>
-                <li><a href="#">Cómo funciona?</a></li>
-                <li><a href="#">Países</a></li>
-                <li><a href="#">Seguridad</a></li>
-              </ul>
+            <div class="col-xs-12 col-sm-12 col-md-6 labcar-route">
+              <h3>Tarifas</h3>
+              <p>Consulta las Tarifas LabCar aquí</p>
+              <div class="form-group row">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                  <img src="assets/images/shape.png" alt="">
+                </div>
+                <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
+                  <input type="text" class="form-control input-style" id="usr" placeholder="Ingrese su punto de partida">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                  <img src="assets/images/shape2.png" alt="">
+                </div>
+                <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
+                  <input type="text" class="forma-tarifa form-control input-style" id="usr" placeholder="Ingrese su destino">
+                </div>
+              </div>
+              <div class="text-center">
+                <button class="btn btn-default btn-lab">
+                  ¡TRAZAR RUTA!</strong>
+                </button>
+              </div>
             </div>
-            <div class="col-lg-6">
-              <ul>
-                <li><a href="#">Oportunidades</a></li>
-                <li><a href="#">Nuestra historia</a></li>
-                <li><a href="#">API de LabCar</a></li>
-                <li><a href="#">Eventos</a></li>
-                <li><a href="#">Desarrolladores</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Laboratoria</a></li>
-                <li><a href="#">Coders</a></li>
-              </ul>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg">
+              <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3328.066312055983!2d-70.7461681852342!3d-33.473624280767275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sfatima+332!5e0!3m2!1ses!2scl!4v1512532457481" width="400" height="400"
+                frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
-        </div>
-        <div class="col-lg-3">
-          <img src="assets/images/appstore.png" height="50">
-          <img src="assets/images/enBadgeWebGeneric.png" height="50">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="page-header">
-          </div>
-          <p></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <p class="pie-depagina">2017 LabCar technologies Inc.</p>
         </div>
       </div>
     </section>
-
+    <footer>
+      <div class="container-fluid bg-gray">
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="assets/images/logoBlanco.png" alt="">
+            <div class="row lines">
+              <div class="redes-sociales col-xs-6 col-sm-6 col-xs-push-6 col-sm-push-6 col-md-push-0 col-md-3 profile-header">
+                    <!-- iconos -->
+                  <a><i class="ion-social-facebook"></i></a>
+                  <a><i class="ion-social-twitter"></i></a>
+                  <a><i class="ion-social-linkedin"></i></a>
+                  <a><i class="ion-social-facebook"></i></a>
+                  <a><i class="ion-social-apple"></i></a>
+                  <a><i class="ion-play"></i></a>
+                <img src="assets/images/appstore.png" alt="" class="visible-xs-block visible-sm-block link-to-app img-responsive">
+                <img src="assets/images/enBadgeWebGeneric.png" alt="" class="visible-xs-block visible-sm-block link-to-app img-responsive">
+              </div>
+              <div class="col-xs-6 col-sm-6 col-xs-pull-6 col-sm-pull-6 col-md-pull-0 col-md-3">
+                <ul>
+                  <li><a href="#">Viaja</a></li>
+                  <li><a href="#">Ciudades</a></li>
+                  <li><a href="#">Conduce</a></li>
+                  <li><a href="#">Ciudades</a></li>
+                  <li><a href="#">Cómo funciona?</a></li>
+                  <li><a href="#">Entregas</a></li>
+                  <li><a href="#">Países</a></li>
+                  <li><a href="#">Seguridad</a></li>
+                </ul>
+              </div>
+              <div class="hidden-xs hidden-sm col-md-3">
+                <ul>
+                  <li><a href="#">Nuestra Historia</a></li>
+                  <li><a href="#">Oportunidades</a></li>
+                  <li><a href="#">API de LabCar</a></li>
+                  <li><a href="#">Eventos</a></li>
+                  <li><a href="#">Desarrolladores</a></li>
+                  <li><a href="#">Servicios</a></li>
+                  <li><a href="#">Laboratoria</a></li>
+                  <li><a href="#">Coders</a></li>
+                </ul>
+              </div>
+              <div class="hidden-xs hidden-sm col-md-3">
+                <img src="assets/images/appstore.png" alt="" class="visible-xs-block visible-sm-block visible-md-block visible-lg-block link-to-app img-responsive">
+                <img src="assets/images/enBadgeWebGeneric.png" alt="" class="visible-xs-block visible-sm-block visible-md-block visible-lg-block link-to-app img-responsive">
+              </div>
+            </div>
+            <p class="pie-depagina">© 2017 LabCar technologies Inc.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- container de todo el sitio -->
     </div>
@@ -195,7 +192,9 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  	<!-- Latest compiled and minified JavaScript -->
+  	<script src="js/bootstrap.min.js"></script>
   </body>
 
 </html>
