--- a/index.html
+++ b/index.html
@@ -5,40 +5,64 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=de vice-width, initial-scale=1.0">
     <title>Labcar</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <body>
-
-    <nav class="navbar navbar-default nav-labcar navbar-fixed-top">
+    <nav class="navbar navbar-default no-margin">
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <img src="assets/images/logoForma.png" alt="">
+        <div class="navbar-header">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed btn-hamburger" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+            <a class="navbar-brand" href="#">
+            <img class="logo-first" alt="Brand" src="assets/images/logoForma.png">
+            </a>
+        </div>
+        <div class="container">
+          <div id="navbar" class="navbar-collapse collapse navbar-right">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Viaja</a></li>
+              <li><a href="#">Conduce</a></li>
+              <li><a href="#initial-sing" data-toggle="modal">Inicio Sesión</a></li>
+            </ul>
+          </div>
+          <!--modal login-->
+          <div class="modal fade " id="initial-sing">
+            <div class="modal-dialog ">
+              <div class="modal-content color-modal">
+                 <!-- header de la ventana -->
+                <div class="modal-header ">
+                   <!-- boton para cerrar la ventana -->
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title"><i class="fa fa-user-circle fa-5x" aria-hidden="true"></i></h3>
+                </div>
+                <!-- contenido de la ventana -->
+                <div class="color-login">
+                  <div class="modal-body">
+                    <div class="input-group">
+                      <span class="input-group-addon" id="sizing-addon2"><i class="fa fa-user" aria-hidden="true"></i></span>
+                      <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
+                      </div>
+                      <div class="input-group">
+                      <span class="input-group-addon" id="sizing-addon2"><i class="fa fa-lock" aria-hidden="true"></i></span>
+                      <input type="text" class="form-control" placeholder="Password" aria-describedby="sizing-addon2">
+                      </div>
+                      <button type="button" class="btn btn-warning btn-modal">LOGING</button>
+                      <p class="text-modal">Forgot password?<a href="#"> Click Here</a></p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right navbar-lab">
-                <li><a href="#">Viaja</a></li>
-                <li><a href="#">Conduce</a></li>
-                <li><a href="#">Inicia Sesión</a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
           </div>
         </div>
-      </div><!-- /.container-fluid -->
+      </div>
     </nav>
-
-
-
     <section>
       <div class="bg-img1">
         <div class="container-fluid">
@@ -92,7 +116,84 @@
           <div class="col-xs-12 com-sm-12 col-md-6 col-md-offset-6 col-lg-4 col-lg-offset-8 bg-black dark-container-size">
             <p class="titular">Conduce cuando quieras</p>
             <p class="parrafo">LabCar es una opción flexible para alcanzar tus metas financieras</p>
-            <button class="btn  yellow-btn">Conviértete en conductor</button>
+            <button class="btn  yellow-btn" ype="submit" href="#conviertete" data-toggle="modal">Conviértete en conductor</button>
+            <!--modal-->
+            <div class="modal fade" id="conviertete">
+              <div class="modal-dialog">
+                <div class="modal-content box-grey">
+                  <!-- header de la ventana -->
+                  <div class="modal-header">
+                  <!-- boton para cerrar la ventana -->
+                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  </div>
+                  <!-- contenido de la ventana -->
+                  <div class="modal-body">
+                    <form>
+                      <div class="form-group">
+                        <label>¿Tienes vehículo de 4 puertas?</label>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div class="input-group">
+                              <input type="text" class="form-control" placeholder="SÍ">
+                              <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label>Marca</label>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div class="input-group">
+                              <input type="text" class="form-control" placeholder="Elige la marca del vehículo">
+                              <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                              </div><!-- /btn-group -->
+                            </div><!-- /input-group -->
+                          </div><!-- /.col-lg-12 -->
+                        </div><!-- /.row -->
+                        <p>¿No ves tu vehículo en la lista? Envía un correo electrónico a</p>
+                        <p><a href="#">sociosmdv@uber.com</a></p>
+                      </div>
+                      <div class="form-group">
+                        <label>Modelo</label>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div class="input-group">
+                              <input type="text" class="form-control" placeholder="modelo1">
+                              <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                       </div>
+                       <div class="form-group">
+                        <label>Año</label>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div class="input-group">
+                              <input type="text" class="form-control" placeholder="2017">
+                              <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label>Número de la matrícula</label>
+                        <input type="text" class="form-control" placeholder="Número de la matrícula">
+                        <p>La información de la matrícula ayuda a los clientes a identificar tu vehículo</p>
+                      </div>
+                      <button type="submit" class="btn btn-info btn-send">ENVIAR</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -188,13 +289,11 @@
 
     <!-- container de todo el sitio -->
     </div>
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  	<!-- Latest compiled and minified JavaScript -->
-  	<script src="js/bootstrap.min.js"></script>
   </body>
-
 </html>
